--- a/app/src/main/res/menu/menu_main_bottom.xml
+++ b/app/src/main/res/menu/menu_main_bottom.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="Fragment1" />
+        android:title="CreateShop" />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Fragment2" />
+        android:title="RetrieveShop" />
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="Fragment3" />
+        android:title="EditShop" />
 
 </menu>
