--- a/app/src/main/res/menu/menu_main_bottom.xml
+++ b/app/src/main/res/menu/menu_main_bottom.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_shop"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="CreateShop" />
+        android:title="Shop Details" />
 
     <item
         android:id="@+id/navigation_dashboard"
