--- a/app/src/main/res/layout/fragment_create_test.xml
+++ b/app/src/main/res/layout/fragment_create_test.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cslee.kamponghubso.fragment.CreateTestFragment">
+    tools:context="com.example.cslee.kamponghubso.fragment.test.CreateTestFragment">
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
