--- a/app/src/main/res/layout/fragment_create_shop.xml
+++ b/app/src/main/res/layout/fragment_create_shop.xml
@@ -156,9 +156,36 @@
             android:inputType="number"
             android:maxLength="6"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.558"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/shopAddress" />
+
+        <TextView
+            android:id="@+id/lblPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:text="Telephone:"
+            android:textAlignment="textStart"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lblPostal" />
+
+        <EditText
+            android:id="@+id/phoneNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Telephone"
+            android:inputType="number"
+            android:singleLine="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/shopPostal" />
 
         <TextView
             android:id="@+id/lblDescription"
@@ -167,12 +194,11 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
             android:text="Description:"
             android:textAlignment="textStart"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lblPostal" />
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
         <EditText
             android:id="@+id/shopDescription"
@@ -185,9 +211,8 @@
             android:inputType="textMultiLine"
             android:singleLine="false"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.366"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/shopPostal" />
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
         <TextView
             android:id="@+id/lblUploadImage"
