--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -11,7 +11,8 @@
         android:layout_height="150dp"
         android:layout_margin="8dp"
         android:layout_weight="3"
-        android:scaleType="fitXY" />
+        android:contentDescription="Shop Image"
+        android:scaleType="fitCenter" />
 
     <LinearLayout
         android:layout_width="0dp"
