--- a/app/src/main/res/layout/fragment_create_shop.xml
+++ b/app/src/main/res/layout/fragment_create_shop.xml
@@ -37,8 +37,8 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="Shop Name"
-            android:inputType="textPersonName"
-            android:singleLine="false"
+            android:inputType="text"
+            android:maxLength="50"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -127,10 +127,11 @@
             android:ems="10"
             android:hint="e.g. Blk 12"
             android:inputType="textCapCharacters|textPostalAddress"
+            android:maxLength="10"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/shopUnit" />
+            app:layout_constraintTop_toBottomOf="@+id/endTime" />
 
         <TextView
             android:id="@+id/lblUnit"
@@ -152,7 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="e.g. #01-100"
             android:inputType="textCapCharacters|textPostalAddress"
@@ -160,7 +161,7 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/endTime" />
+            app:layout_constraintTop_toBottomOf="@+id/shopBlk" />
 
         <TextView
             android:id="@+id/lblBuilding"
@@ -200,10 +201,11 @@
             android:ems="10"
             android:hint="e.g. ABC Building"
             android:inputType="textCapCharacters|textPostalAddress"
+            android:maxLength="20"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toBottomOf="@+id/shopBlk" />
+            app:layout_constraintTop_toBottomOf="@+id/shopUnit" />
 
         <TextView
             android:id="@+id/lblStreet"
@@ -229,6 +231,7 @@
             android:ems="10"
             android:hint="e.g. Flower Road"
             android:inputType="textCapCharacters|textPostalAddress"
+            android:maxLength="50"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -297,11 +300,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
             android:text="Description:"
             android:textAlignment="textStart"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
+            app:layout_constraintTop_toBottomOf="@+id/lblPhone" />
 
         <EditText
             android:id="@+id/shopDescription"
@@ -313,6 +317,7 @@
             android:ems="10"
             android:inputType="textMultiLine"
             android:singleLine="false"
+            android:maxLength="500"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
