--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#09091A</item>
+        <item name="colorPrimaryDark">#09091A</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:navigationBarColor">#09091A</item>
     </style>
 
 </resources>
