--- a/app/src/main/res/layout/fragment_shop_list.xml
+++ b/app/src/main/res/layout/fragment_shop_list.xml
@@ -5,22 +5,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.cslee.kamponghubso.fragment.ShopListFragment">
 
-        <Button
-            android:id="@+id/addShop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Add Shop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/shopListRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
