--- a/app/src/main/res/layout/fragment_create_ad.xml
+++ b/app/src/main/res/layout/fragment_create_ad.xml
@@ -1,34 +1,36 @@
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.cslee.kamponghubso.fragment.CreateAdFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context="com.example.cslee.kamponghubso.fragment.CreateAdFragment">
+        android:layout_height="match_parent">
 
         <Spinner
             android:id="@+id/spinnerName"
-            android:layout_width="368dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lblShopName" />
+            app:layout_constraintStart_toEndOf="@+id/lblShopName"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/lblShopNameRequired"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:text="Required"
             android:textColor="@android:color/holo_red_light"
-            app:layout_constraintStart_toEndOf="@+id/lblShopName"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerName" />
 
         <TextView
             android:id="@+id/lblShopName"
@@ -36,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="Shop Name"
+            android:text="Shop Name:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +51,7 @@
             android:layout_weight="1"
             android:background="@drawable/ic_delete_red_200_24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerName" />
+            app:layout_constraintTop_toBottomOf="@+id/lblShopNameRequired" />
 
         <ImageView
             android:id="@+id/createPicture"
@@ -57,21 +59,21 @@
             android:layout_height="150dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
             android:layout_weight="3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnUploadImage" />
+            app:layout_constraintEnd_toStartOf="@+id/btnDeleteImage"
+            app:layout_constraintHorizontal_bias="0.571"
+            app:layout_constraintStart_toEndOf="@+id/btnUploadImage"
+            app:layout_constraintTop_toBottomOf="@+id/lblImageRequired" />
 
         <TextView
             android:id="@+id/lblImageRequired"
             android:layout_width="wrap_content"
             android:layout_height="19dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="8dp"
             android:text="Required"
             android:textColor="@android:color/holo_red_light"
-            app:layout_constraintStart_toEndOf="@+id/btnUploadImage"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerName" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnUploadImage" />
 
         <Button
             android:id="@+id/btnUploadImage"
@@ -82,7 +84,33 @@
             android:layout_weight="1"
             android:background="@drawable/ic_camera_alt_black_24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/spinnerName" />
+            app:layout_constraintTop_toBottomOf="@+id/lblShopNameRequired" />
+
+        <TextView
+            android:id="@+id/lblAdDesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Description:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createPicture" />
+
+        <EditText
+            android:id="@+id/adDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:singleLine="false"
+            android:maxLength="300"
+            android:hint="optional"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/lblAdDesc"
+            app:layout_constraintTop_toBottomOf="@+id/createPicture" />
 
         <Button
             android:id="@+id/btnCreateAdvert"
@@ -95,7 +123,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createPicture" />
+            app:layout_constraintTop_toBottomOf="@+id/adDescription" />
 
     </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
 
