--- a/app/src/main/res/layout/fragment_shop_detail.xml
+++ b/app/src/main/res/layout/fragment_shop_detail.xml
@@ -172,8 +172,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shopDescription">
-<!--            tools:context="com.example.hdb.kamponghub.fragment.MapsFragment">-->
+            app:layout_constraintTop_toBottomOf="@+id/shopDescription"
+            tools:context="com.example.hdb.kamponghub.fragment.MapsFragment">
 
             <fragment
                 android:id="@+id/fragment"
